fourth lab